--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,10 +1,10 @@
 <% @places.each do |place| %>
-    <div>
-        <h1><%= place.name %></h1><br />
-        <p><%= place.address %></p><br />
-        <i><%= place.description %></i>
+    <div class="booyah-box col-10 offset-1" >
+        <h1><%= place.name %></h1>
+        <i><%= place.address %></i><br /><br />
+        <p><%= place.description %></p><br />
         
     </div>
     
-    <hr />
+ 
 <% end %>
