--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -16,3 +16,15 @@ h1, h2, h3, h4, h5, h6 {
     margin:0;
     padding:0;
 }
+
+body {
+    background: image_url('white_tiles.png');
+    /* Traditional Garamond-based serif stack */
+    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+
+}
+
+.navbar  {
+    background: image_url('gun_metal_@2X.png');
+    box-shadow: 0px 3px 3px red;
+}
