--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -28,3 +28,8 @@ body {
     background: image_url('gun_metal_@2X.png');
     box-shadow: 0px 3px 3px red;
 }
+
+.navbar-inverse .navbar-brand {
+    color: #E3E85A;
+    font-family: 'playfair_displayregular', sans-serif;
+}
