tried new font, but size still won't change

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -31,5 +31,6 @@ body {
 
 .navbar-inverse .navbar-brand {
     color: #E3E85A;
-    font-family: 'playfair_displayregular', sans-serif;
+    font-family: 'happy_monkeyregular', sans-serif;
+    font-size: 125%;
 }
