pagination sorted out

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -3,8 +3,14 @@
         <h1><%= place.name %></h1>
         <i><%= place.address %></i><br /><br />
         <p><%= place.description %></p><br />
-        
+
     </div>
-    
- 
+
 <% end %>
+
+    <div class="digg_pagination">
+         <%= will_paginate @places, :container => false %>
+   </div>
+
+ 
+ 
