--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
           <li class="nav-item">
-            <%= link_to 'New Place', new_place_path, class: 'nav-link' %>
+            <%= link_to 'Click here to add a new place!', new_place_path, class: 'nav-link' %>
           </li>
         </ul>
       </div>
