--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -58,3 +58,14 @@
   <%= f.input :rating %>
   <%= f.submit "Add a comment", class: 'btn btn-primary' %>
 <% end %>
+
+<h1>Comments</h1>
+
+<% @place.comments.each do |comment| %>
+  <div>
+    <blockquote>
+      <b><%= comment.rating %></b> - <%= comment.message %>
+      <small><%= comment.user.email %></small>
+    </blockquote>
+  </div>
+<% end %>
