--- a/app/views/notification_mailer/comment_added.html.erb
+++ b/app/views/notification_mailer/comment_added.html.erb
@@ -1,6 +1,7 @@
 <p>Hey there!</p>
 <p>
-    Congrats! <b>A comment has been added on DejaBBQ</b>
+    Congrats! <b>A comment has been added on DejaBBQ</b>.
+    Check it out <%= link_to 'here', place_url(@place) %>.
 </p>
 
 Yummy!<br/>
