--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -27,11 +27,13 @@ body {
 .navbar  {
     background: image_url('gun_metal_@2X.png');
     box-shadow: 0px 3px 3px red;
+    margin-bottom: 0;
 }
 
 .navbar-inverse .navbar-brand {
     color: #E3E85A;
     font-family: 'happy_monkeyregular', sans-serif;
+    margin-bottom: 0;
 }
 
 .digg_pagination {
@@ -173,4 +175,24 @@ blockquote:before {
 
 blockquote p {
   display: inline;
+}
+
+.carousel-inner > .carousel-item > img, .carousel-inner > .carousel-item > a > img {
+  height: 550px;
+  width: 100%;
+}
+
+.carousel-caption {
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgba(0,0,0,0.95) 2px 2px ;
+  background-color: rgba(0,0,0,0.5);
+  width: 100%;
+  position: absolute;
+  left: 0;
+}
+
+.carousel {
+  box-shadow: 0px 3px 8px #2a2a2a;
 }
