--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -71,7 +71,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <%= f.submit "Add a comment", class: 'btn btn-primary' %>
+            <%= f.submit "Submit", class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
@@ -82,7 +82,7 @@
   <h1 class="float-left">Comments</h1>
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-    Add a comment
+    Add a Comment
   </button>
 </div>
 
